Complete part 2 and fix minor bugs
Some of the images were not fitting in correctly and I accidentally
deleted the dimensions of the rainbow photo... it is fixed now!

--- a/style.css
+++ b/style.css
@@ -52,10 +52,13 @@ a {
   color: white;
 }
 
-button {
+.pull button {
   background-color: #779952;
   color: white;
   padding: 16px;
+  border-radius: 8px;
+  border: none;
+  max-width: 150px;
 }
 
 .pull {
@@ -70,7 +73,7 @@ button {
 
 .hook-img {
   max-width: 40vw;
-  max-height: 40vw;
+  max-height: 20vw;
 }
 
 .pieceset img {
@@ -83,19 +86,27 @@ button {
 .pair {
   display: flex;
   flex-direction: column;
+  gap: 16px;
 }
 
 .pieceset .description {
   max-width: 250px;
+  text-align: center;
 }
 
 .pieceset {
   display: flex;
   justify-content: center;
   gap: 48px;
+  flex-wrap: wrap;
 }
 
 .parttwo {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.parttwo .title {
+  margin: 48px 0px;
 }
